[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/components/EntryDisplay.gd" type="Script" id=1]
[ext_resource path="res://hex_panel/HexContainer.tscn" type="PackedScene" id=2]

[node name="EntryDisplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
dragger_visibility = 2
__meta__ = {
"_edit_lock_": true
}

[node name="PanelContainer" type="PanelContainer" parent="HSplitContainer"]
margin_right = 914.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.25

[node name="Control" type="Control" parent="HSplitContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 907.0
margin_bottom = 713.0
mouse_filter = 2

[node name="SolveUI" type="VBoxContainer" parent="HSplitContainer/PanelContainer/Control"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -101.0
margin_bottom = 44.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SolveButton" type="Button" parent="HSplitContainer/PanelContainer/Control/SolveUI"]
margin_right = 101.0
margin_bottom = 20.0
grow_horizontal = 0
text = "Submit Guess"
align = 2

[node name="BSpace" type="Button" parent="HSplitContainer/PanelContainer/Control/SolveUI"]
margin_top = 24.0
margin_right = 101.0
margin_bottom = 44.0
text = "<- Backspace"

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 907.0
margin_bottom = 713.0
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="HSplitContainer/PanelContainer/ScrollContainer"]
margin_right = 900.0
margin_bottom = 706.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HexContainer" parent="HSplitContainer/PanelContainer/ScrollContainer/CenterContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 450.0
margin_top = 353.0
margin_right = 450.0
margin_bottom = 353.0
mouse_filter = 2

[node name="Control" type="Control" parent="HSplitContainer"]
margin_left = 914.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="CategoryLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -14.0
margin_right = 40.0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SourceLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -14.0
grow_horizontal = 0
grow_vertical = 0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HSplitContainer/PanelContainer/Control/SolveUI/SolveButton" to="." method="_on_SolveButton_pressed"]
[connection signal="pressed" from="HSplitContainer/PanelContainer/Control/SolveUI/BSpace" to="." method="_on_BSpace_pressed"]
[connection signal="setup" from="HSplitContainer/PanelContainer/ScrollContainer/CenterContainer/HexContainer" to="." method="_on_HexContainer_setup"]
